2007-03-05  Sascha L. Teichmann  <sascha.teichmann@intevation.de>

	Make plugin Java 1.4 compatible

	* etc/build.xml:
		The 'compile' target forces compiler to treat source as Java 1.4
		and build 1.4 stamped binaries.

	* src/de/intevation/printlayout/LayoutFrame.java,
		src/de/intevation/printlayout/batik/ClippingSVGGraphics2D.java,
		src/de/intevation/printlayout/tools/BoxPropPanel.java,
		src/de/intevation/printlayout/ui/JPEGParameterDialog.java:
		Fixed some auto boxing problems. This feature was introduced
		in Java 1.5
		
2007-03-04  Sascha L. Teichmann  <sascha.teichmann@intevation.de>

	Replaced deprecated File.toURL() with File.toURI()
	
	* src/de/intevation/printlayout/DocumentManager.java:
		Replace File.toURL() with File.toURI(). This toURL() call
		is deprecated in Java 6 for a good reason. We need only the
		URIs anyway and it's backwards compatible.

	* src/de/intevation/printlayout/batik/ClippingSVGGraphics2D.java:
		- Add a JavaDoc.
		- Removed a needless import.

	* src/de/intevation/printlayout/util/CohenSutherland.java:
		Name of file was wrong in header.

2007-03-04  Sascha L. Teichmann  <sascha.teichmann@intevation.de>

	Clip geometries to visible area while importing map as SVG from GIS.

	* src/de/intevation/printlayout/batik/ClippingSVGGraphics2D.java:
		New. Extends Batik's SVGGraphics2D and implements real clipping for 
		the rendered geometries. TODO: handle the image stuff too.

	* src/de/intevation/printlayout/util/CohenSutherland.java:
		Implements Cohen Sutherland line clipping.

	* src/de/intevation/printlayout/Map2SVG.java:
		Modified to use the ClippingSVGGraphics2D instead of the
		standard SVGGraphics2D. If the user sets the system property
		de.intevation.printlayout.no.map.clip=true the unclipped
		version is used.

	* src/de/intevation/printlayout/DocumentManager.java:
		Fixed broken JavaDoc tag.

2007-03-02  Sascha L. Teichmann  <sascha.teichmann@intevation.de>
